# LearnCmake

t1/: CMakeLists.txt
t2/: CMakeLists.txt
t2/lib/: CMakeLists.txt  hello.cpp  hello.h
t2/src/: CMakeLists.txt  main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
